# semipy-package

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_user_files_access
.semiformal_manual_test/: aae1228144a7bd68.portal.json  dependency_graph.json
.semiformal_manual_test/runtime/: manual_dreamcoder_scenario_b.semi.py
.semiformal_visual_builder/runtime/: use_visualization_builder.semi.py
docker/kernel-gateway/: Dockerfile
docs/: README.md  algorithm.tex  algorithm_abbrev.tex  architecture.md  behavioral-contract.md  decisions-eval-findings.md  decisions.md  effect design.md  effects.md  interpreted-mode.md  orchestration.md  semi-formal-programming.md  sketch-library.md
docs/brainstorms/: 2026-06-16-surface-silent-decisions-requirements.md  2026-07-03-programmable-neural-programs-design-inspiration.md  2026-07-03-programmable-neural-programs-requirements.md  2026-07-04-incremental-formalization-thesis.md  2026-07-04-learning-around-generation-pipeline-synthesis.md  2026-07-11-contract-surface-brainstorm.md
docs/plans/: 2026-06-06-001-feat-multi-agent-orchestration-pipeline-plan.md  2026-06-16-001-feat-surface-silent-decisions-plan.md  2026-07-04-001-refactor-frontier-kernel-plan.md  2026-07-11-001-feat-contract-surface-two-personas-plan.md
examples/: .zshrc  analytics.py  apache-log-usecase.md  apache_log_compiler.py  apache_log_demo.ipynb  apache_log_semiformal_stages.py  contract_demo.py  ctd_profile_qc.py  data_wrangling.py  datetime_test.py  datetime_usecase.ipynb  effects_db_transactions.py  extend_wrangler.py  fasta_header_metadata.py  game.py  generalize_demo.py  manual_dreamcoder_scenario_b.py  minimal_semi.py  receipt.ipynb  receipt.py  regression_demo.py  selection.py  semi.ipynb  semi.py  skeleton_e2e_test.py  sketch_pattern_learn_demo.py  sketch_reuse_wrangling.py  test.ipynb  test_wrangling.ipynb  use_analytics.py  use_contract_intelligence.py  use_csv_kit.py  use_document_pipeline.py  use_selection.py  use_sponsorship_canonicalizer.py  use_visualization_builder.py  use_weather_kit.py  use_wrangling.py  wrangler.py
examples/csv_kit/: __init__.py  table.py
examples/domain_tests/: database_manip.py  doc_processing.py  encryption.py  rlhf_preference.py  (+1 more)
paper/: main.tex
semipy/: __init__.py  __main__.py  _slot_region.py  agent.py  cache.py  change_guidance.py  cli.py  compiler.py  config.py  console_io.py  dag.py  dataclass_utils.py  decorator.py  diagnostics_export.py  documents.py  domain_models.py  executor.py  flow.py  generator.py  gist.py  index_merge.py  interpreted.py  kernel_container.py  lineage.py  lowering.py  lowering_ast.py  models.py  portal_inspect.py  reactive.py  resolver.py  routing.py  runtime_fingerprint.py  script_analyzer.py  semi_fn.py  session_anchor.py  session_cache.py  slot_observations.py  slot_resolver.py  store.py  template.py  (+4 more)
semipy-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  semipy-vscode-0.1.0.vsix  semipy-vscode-0.2.0.vsix  semipy-vscode-0.2.1.vsix  semipy-vscode-0.2.2.vsix  semipy-vscode-0.3.0.vsix  semipy-vscode-0.3.1.vsix  semipy-vscode-0.3.2.vsix  tsconfig.json
semipy_testbed/: GETTING_STARTED.md  README.md  SETUP_SUMMARY.py  __init__.py  config.py  gist_builder.py  gist_executor.py  inference.py  run_quick_test.py  types.py  validator.py
tests/: conftest.py  test_attach_producer_flow.py  test_coerce_dataclass.py  test_console_messages.py  test_decision_assert.py  test_decision_classifier.py  test_decision_cli.py  test_decision_coverage_fixes.py  test_decision_discriminate.py  test_decision_divergence.py  test_decision_divergence_effects.py  test_decision_draw.py  test_decision_generate_scored.py  test_decision_generate_wiring.py  test_decision_germs.py  test_decision_persistence.py  test_decision_pick.py  test_decision_runmodes.py  test_decision_surface.py  test_dispatch_loading.py  test_document_materialize.py  test_documents_load_text.py  test_flow.py  test_gist_invocation.py  test_interpreted_freeze_wiring.py  test_library_and_generation.py  test_lowering.py  test_postponed_annotations.py  test_reactive.py  test_reactive_integration.py  test_semi_free_variables.py  test_session_anchor.py  test_type_adapter.py  test_validator_statement_block_typeadapter.py
(+232 files in other folders)
