[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semipy"
version = "0.1.0"
description = "Runtime semiformal system: @semiformal and semi() for semantically underspecified logic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.3.19",
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.4.1",
    "expression[pydantic]>=5.6.0",
    "firecrawl-py>=1.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "liteparse>=1.0.0",
    "llama-cloud>=1.6.0",
    "openrouter>=0.7.11",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "pretty-little-summary>=0.1.1",
    "pydantic-ai[examples]>=1.63.0",
    "rich[jupyter]>=14.3.2",
    "seaborn>=0.13.2",
    "textual>=8.1.1",
]

[project.optional-dependencies]
dev = ["pytest", "python-dotenv"]
e2b = ["e2b-code-interpreter>=1.0"]
example = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "xarray>=2025.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semipy*"]
