[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semiformal-py"
version = "0.1.0"
description = "Runtime semiformal system: @semiformal and semi() for semantically underspecified logic"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ryan Yen", email = "ryanyen2@mit.edu" }]
license = { text = "MIT" }
keywords = ["ai", "code-generation", "llm", "semiformal", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0",
    "expression[pydantic]>=5.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "liteparse>=1.0.0",
    "openrouter>=0.7.11",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "pretty-little-summary>=0.1.1",
    "pydantic-ai[examples]>=1.63.0",
    "rich[jupyter]>=14.3.2",
    "seaborn>=0.13.2",
]

[project.scripts]
semipy = "semipy.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
e2b = ["e2b-code-interpreter>=2.4.1"]
pdf = ["llama-cloud>=1.6.0"]
cocoindex = ["cocoindex>=0.3.19"]
search = ["firecrawl-py>=1.0"]
tui = ["textual>=8.1.1"]
example = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "xarray>=2025.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semipy*"]
exclude = ["semipy_testbed*"]

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
