[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semiformal-py"
version = "0.2.2"
description = "Runtime semiformal system: @semiformal and semi() for semantically underspecified logic"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ryan Yen", email = "ryanyen2@mit.edu" }]
license = { text = "MIT" }
keywords = ["ai", "code-generation", "llm", "semiformal", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0",
    "pydantic-ai>=0.0.54",
    "openai>=1.0",
    "rich>=13.0",
]

[project.scripts]
semipy = "semipy.cli:main"

[project.optional-dependencies]
jupyter = ["ipywidgets>=8.1"]
pdf = ["liteparse>=1.0", "llama-cloud>=1.6.0"]
e2b = ["e2b-code-interpreter>=2.4.1"]
cocoindex = ["cocoindex>=0.3.19"]
search = ["firecrawl-py>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["semipy*"]
exclude = ["semipy_testbed*"]

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
